Creado mediante Colaboratory

--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -4322,7 +4322,7 @@
         "id": "bI5e_TjR7msI"
       },
       "source": [
-        "## Preparando Test"
+        "##  Test"
       ]
     },
     {
@@ -5179,7 +5179,7 @@
       ],
       "provenance": [],
       "mount_file_id": "1ywFvCQNbvp0gCgzgjww-ZDWQZTCivajO",
-      "authorship_tag": "ABX9TyOJBB1//Wqts1dhU3meydn2",
+      "authorship_tag": "ABX9TyO5uqyEXfxOn8Dl45R5x0AC",
       "include_colab_link": true
     },
     "kernelspec": {
